src/popup/popup.css
/* ... */
.csp-problem-indicator {
  background-color: #c0d;
}
.regexp-problem-indicator {
  background-color: #d00;
}
[class$="-problem-indicator"] {
  width: 14px;
  height: 14px;
  line-height: 15px;
  border-radius: 8px;
  margin-right: 4px;
  margin-left: 4px;
  text-align: center;
  &, &:hover {
    color: white !important;
  }
  font-weight: bold;
  box-sizing: border-box;
  cursor: pointer;
  font-size: 90%;
}

:is(.regexp-partial, .regexp-invalid) .actions {
  order: 2;
}

i {
  pointer-events: none;
  font-size: 16px;
}

a:hover i {
  color: var(--fg);
}

#main-actions {
  background: var(--c95);
}
#write-wrapper {
  max-width: 100%;
  padding: $padToEntryH $pad;
  box-sizing: border-box;
  overflow: hidden;
  display: flex;
  flex: 1;
  .icon {
    margin: -1px 3px -1px -1px; /* ahem centering */
  }
  .i-plus {
    font-size: 15px; /* looks crisp even on a single density display */
  }
}
#write-style {
  cursor: pointer;
  overflow: hidden;
}
.write-style-link {
  text-decoration: none;
  white-space: nowrap;
  &:last-child {
    color: var(--c50);
    overflow: hidden;
    flex: 1 0 1ch;
    text-overflow: ellipsis;
  }
}
.about-blank > .breadcrumbs {
  cursor: default;
}
.match:not([data-frame-id="0"]) a {
  text-decoration: none; /* not underlining iframe links until hovered to reduce visual noise */
}
.match .match {
  margin-left: .5rem;
}
#write-for-frames::before,
.match .match::before {
  content: "";
  width: .4rem;
  height: .4rem;
  margin-left: -.5rem;
  display: block;
  position: absolute;
  border-width: 1px;
  border-style: none none solid solid;
}
.dupe > .breadcrumbs {
  opacity: .5;
}
.dupe:not([data-children]) {
  display: none;
}
#write-for-frames {
  margin: 0 0 -.25em .5rem;
  color: var(--c50);
  transition: color .2s;
  &:hover {
    color: var(--fg);
  }
}
#write-style:not(.expanded) .match:not([data-frame-id="0"]),
#write-style:not(.expanded) .match .match {
  display: none;
}
.breadcrumbs {
  display: flex;
  flex-wrap: wrap;
  &:hover a {
    color: var(--c75);
    text-decoration: none
  }
}
/* "dot" after each subdomain name except tld */
[subdomain]:nth-last-child(n + 3)::after {
  content: "."
}
/* :hover style */
.breadcrumbs.url\(\) > a,
/* :hover or :focus on "this URL" sets class="url()" */
.breadcrumbs [subdomain]:is(:hover, :focus),
.breadcrumbs [subdomain]:is(:hover, :focus) ~ [subdomain] {
  color: inherit;
  text-decoration: underline;
}

/* action buttons */

#popup-options {
  display: flex;
  padding: $pad;
  background: var(--bg);
  justify-content: space-between;
  button:not(:hover) {
    border-color: transparent;
    background: none;
  }
  > * {
    display: flex;
    align-items: center;
    max-width: calc(50% - 2px - var(--inner-padding));
  }
}
button.icon {
  padding: 2px;
  border-radius: 50%;
}
.styles-first:not(.search-results-shown) {
  #popup-options .split-btn-menu {
    bottom: 0;
    transform: translateY(-20px); /* global button style: 13(font) * 1.2(line) + 4(pad) + 2(border) */
  }
  .split-btn-pedal::after {
    border-top: var(--side) solid transparent;
    border-bottom: calc(var(--side) * 1.3) solid currentColor;
    vertical-align: top;
    position: relative;
    top: 1px;
  }
}
.styles-last {
  body {
    display: flex;
    flex-direction: column;
  }
  .blocked-info,
  #toggler,
  #no-styles {
    order: 2;
  }
  #installed {
    order: 3;
  }
  #main-actions {
    order: 1;
    > :first-child {
      margin-top: 0;
    }
  }
  #search-results {
    order: 4;
  }
  #pct {
    order: -1;
  }
}

.unreachable .entry:not(.frame) {
  opacity: .25;
}
.blocked-info {
  background-color: var(--c98);
  > :first-child {
    font-weight: bold;
    background-color: var(--bg);
  }
  &[open] > summary {
    cursor: zoom-out;
  }
  > div:first-child,
  p {
    margin: 0;
    padding: $pad;
    border-bottom: var(--border);
  }
  code {
    overflow-wrap: break-word;
  }
}
body > details > summary {
  border-bottom: var(--border);
  padding: $pad $pad $pad 0;
  cursor: zoom-in;
  &::marker {
    margin: 0;
  }
}

/******************************************/

.non-touch {
  .non-touch-dimmed {
    transition: opacity .15s;
    &:not(:hover) {
      opacity: .5;
    }
  }
}

#message-box.note.hotkeys { /* overriding the default CSS for #message-box.note */
  align-items: flex-end;
  hr {
    border-style: groove;
    margin: .25em 0;
  }
  code {
    display: inline-block;
    color: var(--fg);
    background: linear-gradient(var(--c80), var(--bg));
    padding: 1px 6px 0;
    margin: 0 2px;
    line-height: 1.1;
    border: 1px solid var(--bg);
    border-radius: 4px;
    box-shadow: 1px 1px 4px rgba(0, 0, 0, .3);
    font-weight: bold;
    font-size: 13px;
    white-space: nowrap;
  }
}

@media (max-height: 130px) {
  #find-split {
    --menu-pad: .25em;
  }
}

